syntax = "proto3";

package Proto.Command.Settings;

service SettingsCommandService {
  rpc CreateSettings (CreateSettingsProtoCommand) returns (CommandResponse);
  rpc UpdateSettings (UpdateSettingsProtoCommand) returns (CommandResponse);
}

message CreateSettingsProtoCommand {
  string settingsId = 1;
  string exportPath = 2;
  bool isAddNewTicketsToCurrentSprintActive = 3;
}

message UpdateSettingsProtoCommand {
  string settingsId = 1;
  string exportPath = 2;
  bool isAddNewTicketsToCurrentSprintActive = 3;
}

message CommandResponse {
  bool success = 1;
}
